--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -44,16 +44,17 @@
   </ion-content>
 </ion-view>
 
-    <script id="modal.html" type="text/ng-template">
-      <div class="modal">
-        <header class="bar bar-header bar-positive">
-          <h1 class="title">{{titulli}}</h1>
-          <div class="button button-clear" ng-click="CloseNotification()"><span class="icon ion-close"></span></div>
-        </header>
-        <ion-content class="padding" has-header="true">
-          <div has-header="true">
-            <p>{{teksti}}</p>
-          </div>
-        </ion-content>
+
+<script id="modal.html" type="text/ng-template">
+   <ion-modal-view>
+    <ion-header-bar class="bar bar-header bar-positive">
+      <h1 class="title">{{titulli}}</h1>
+      <button ng-click="CloseNotification()" class="button button-icon icon ion-ios-close-outline"></button>
+    </ion-header-bar>
+    <ion-content has-header="true">
+      <div class="padding">
+         {{teksti}}
       </div>
-    </script>
+    </ion-content>
+  </ion-modal-view>
+</script>
