--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -52,7 +52,7 @@
       <button ng-click="CloseNotification()" class="button button-icon icon ion-ios-close-outline"></button>
     </ion-header-bar>
     <ion-content has-header="true">
-      <div class="padding item">
+      <div class="padding item item-body">
          {{teksti}}
       </div>
     </ion-content>
