--- a/www/templates/ndeshja.html
+++ b/www/templates/ndeshja.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="false" title="{{item.team1}} - {{item.team2}}">
+<ion-view cache-view="false" title="{{item.java}}">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
@@ -6,10 +6,12 @@
     <button class="button button-icon icon ion-ios-refresh-empty" ng-click="doRefresh()"></button>
   </ion-nav-buttons>
 
+<!--
   <div class="bar bar-subheader bar-assertive">
      <h2 class="title">{{item.java}}</h2>
   </div>
-<ion-content class="has-subheader">
+-->
+<ion-content class="has-header">
  <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
  </ion-refresher>
  <div class="item item-text-wrap pad0 bg-transparent">
