--- a/www/templates/lajmet-detaje.html
+++ b/www/templates/lajmet-detaje.html
@@ -1,6 +1,6 @@
 <ion-view title="{{lajmi.title}}">
   <ion-nav-buttons side="left">
-    <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    <button menu-toggle="left" ng-click="showAds()" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
   <img class="full-image lajmi-img" src="http://www.fkvllaznia.net/main/vllaznia/_files/newspublish/{{lajmi.image}}">
