--- a/www/templates/lajmet.html
+++ b/www/templates/lajmet.html
@@ -2,9 +2,12 @@
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
+  <ion-nav-buttons side="right">
+    <button ng-class="anim" class="button button-icon icon" ng-click="subNotification()"></button>
+  </ion-nav-buttons>
   <ion-content class="has-header">
   <ion-refresher
-    pulling-text="Pull to refresh..." spinner="android" on-refresh="doRefresh()">
+    pulling-text="Pull to refresh..." spinner="android" class="assertive" on-refresh="doRefresh()">
   </ion-refresher>
   <div class="list list-inset">
     <label class="item item-input">
