--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -16,7 +16,7 @@
      </ion-slide-box>
      </div>
      <div class="row item item-divider bar bar-assertive statistika">
-        <h1 class="title">Ndeshjet e fundit</h1>
+        <h1 class="title">Ndeshjet e fundit - Test</h1>
      </div>
      <div>
          <div ng-hide="loadNdeshje">
