--- a/www/templates/ndeshja.html
+++ b/www/templates/ndeshja.html
@@ -17,7 +17,7 @@
  </ion-refresher>
  <div class="item item-text-wrap pad0 bg-transparent">
   <div class="row bg-white">
-    <div class="col col-center"><span>{{item.data | date:'dd/MM/yyyy - HH:mm'}}<br>{{item.stadiumi.emri}}</span></div>
+    <div class="col col-center"><span>{{item.data | indexData}}<br>{{item.stadiumi.emri}}</span></div>
   </div>
   <div class="row row-top bg-white">
     <div class="col col-center Vllaznia"><img class="rank" ng-src="http://www.albaniasoccer.com/{{item.logo1}}"><br>{{item.team1}}</div>
