--- a/www/templates/lajmet-detaje.html
+++ b/www/templates/lajmet-detaje.html
@@ -7,6 +7,7 @@
   <div class="item item-body">
 
     <h2 class="lajmi-titulli assertive">{{lajmi.title}}</h2>
+	<p data-ng-bind-html="lajmi.summary"></p>
     <p data-ng-bind-html="lajmi.content"></p>
   </div>
 
@@ -15,7 +16,7 @@
       <i class="icon ion-ios-calendar-outline"></i>
       {{lajmi.data}}
     </a>
-    <a class="tab-item" ng-click="shareL('Lexo lajmin per Vllaznine', '{{lajmi.title}}', 'http://www.fkvllaznia.net/main/vllaznia/_files/newspublish/{{lajmi.image}}', 'http://www.fkvllaznia.net/lajme/{{lajmi.id}}-mobile.html')">
+    <a class="tab-item" ng-click="shareL('Lexo lajmin per Vllaznine', '{{lajmi.title}}', 'http://www.fkvllaznia.com/main/vllaznia/_files/newspublish/{{lajmi.image}}', 'http://www.fkvllaznia.com/lajme/{{lajmi.id}}-mobile.html')">
       <i class="icon ion-share"></i>
       Share
     </a>
