--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -25,15 +25,21 @@
         <ion-item nav-clear menu-close href="#/app/ekipi">
           <i class="ion-ios-people"></i> Ekipi
         </ion-item>
+		<ion-item nav-clear class="item-divider">
+          Superliga
+        </ion-item>
         <ion-item nav-clear menu-close href="#/app/ndeshjet">
           <i class="ion-calendar"></i> Ndeshjet
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/klasifikimi">
+        <ion-item nav-clear menu-close stable href="#/app/klasifikimi">
           <i class="ion-arrow-graph-up-right"></i> Klasifikimi
         </ion-item>
-        <!--<ion-item nav-clear menu-close href="#/app/multimedia">
-          <i class="ion-images"></i> Multimedia
-        </ion-item>-->
+        <ion-item nav-clear class="item-divider">
+           Kupa e Shqiperise
+        </ion-item>
+		<ion-item nav-clear menu-close href="#/app/kupa">
+          <i class="ion-trophy"></i> Ndeshjet
+        </ion-item>
         <ion-item nav-clear menu-close href="#/app/tv">
           <i class="ion-monitor"></i> TV
         </ion-item>
