--- a/www/templates/kupa.html
+++ b/www/templates/kupa.html
@@ -24,7 +24,7 @@
 <script id="popover-template.html" type="text/ng-template">
    <ion-popover-view>
       <ion-content>
-         <ion-radio ng-repeat="item in SezoneListS" ng-value="item.value" ng-model="sezoni_id" ng-change="changeSezoni(item)" ng-click="changeSezoni(item)">{{ item.text }}</ion-radio>
+         <ion-radio ng-repeat="item in SezoneList" ng-value="item.value" ng-model="sezoni_id" ng-change="changeSezoni(item)" ng-click="changeSezoni(item)">{{ item.text }}</ion-radio>
       </ion-content>
    </ion-popover-view>
 </script>
