--- a/www/templates/lojtari.html
+++ b/www/templates/lojtari.html
@@ -3,7 +3,7 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-  <div ng-class="anim" on-swipe-left="lojtariP({{item.pid - 1}})" on-swipe-right="lojtariN({{item.pid + 1}})">
+  <div ng-class="anim" class="animated" on-swipe-left="lojtariP({{item.pid - 1}})" on-swipe-right="lojtariN({{item.pid + 1}})">
     <div>
        <img class="full-image lojtari-img lajmi-img" ng-src="http://www.albaniasoccer.com/{{ item.foto }}">
        <span class="bluza">{{ item.nr }}</span>
@@ -14,7 +14,7 @@
        </div>
     </div>
     
-    <div ng-if="item.pozicioni != 'Tranjer'" class="row item item-divider bar bar-positive statistika">
+    <div ng-if="item.type == 'player'" class="row item item-divider bar bar-positive statistika">
     	<div class="col col-20 col-center"><span class="ikona ndeshje2x"></span> {{ (item.ndeshje != NULL) ? item.ndeshje : 0}}</div>
     	<div class="col col-20 col-center"><span class="ikona gol2x"></span> {{item.gola}}</div>
     	<div class="col col-20 col-center"><span class="ikona verdhe2x"></span> {{item.kv}}</div>
@@ -33,6 +33,9 @@
       <div class="row rnk">
     	<div class="col col-50">N&euml;nshtet&euml;sia</div>
     	<div class="col col-right">{{item.nenshtetsia}}</div>
+      </div>
+	  <div ng-if="item.note" id="lojtaridesc" class="item row small-klasifikimi" data-ng-bind-html="item.note">
+    	
       </div>
     </div>
   </div>    
