--- a/www/templates/tv.html
+++ b/www/templates/tv.html
@@ -6,13 +6,19 @@
     <div>
       <ul class="list pad5 bg-transparent">
           <li class="item">
-            <a class="item-icon-left item-icon-right" ng-click="browse('http://www.fkvllaznia.net/multimedia/tv/1-live.html')"><i class="icon ion-ios-monitor-outline"></i> FkVllaznia TV1 <i class="icon ion-ios-arrow-right"></i></a>
+            <a class="item-icon-left item-icon-right" ng-click="browse('http://www.fkvllaznia.com/multimedia/tv/1-live.html')"><i class="icon ion-ios-monitor-outline"></i> FkVllaznia TV1 <i class="icon ion-ios-arrow-right"></i></a>
           </li>
           <li class="item">
-            <a class="item-icon-left item-icon-right" ng-click="browse('http://www.fkvllaznia.net/multimedia/tv/2-live.html')"><i class="icon ion-ios-monitor"></i> FkVllaznia TV2 <i class="icon ion-ios-arrow-right"></i></a>
+            <a class="item-icon-left item-icon-right" ng-click="browse('http://www.fkvllaznia.com/multimedia/tv/2-live.html')"><i class="icon ion-ios-monitor"></i> FkVllaznia TV2 <i class="icon ion-ios-arrow-right"></i></a>
+          </li>
+		  <li class="item">
+            <a class="item-icon-left item-icon-right" ng-click="browse('http://www.fkvllaznia.com/multimedia/tv/9-live.html')"><i class="icon ion-ios-monitor-outline"></i> FkVllaznia TV3 <i class="icon ion-ios-arrow-right"></i></a>
+          </li>
+		  <li class="item">
+            <a class="item-icon-left item-icon-right" ng-click="browse('http://www.fkvllaznia.com/multimedia/tv/8-live.html')"><i class="icon ion-ios-monitor"></i> FkVllaznia TV4 <i class="icon ion-ios-arrow-right"></i></a>
           </li>
           <li class="item">
-            <a class="item-icon-left item-icon-right" ng-click="browse('http://www.fkvllaznia.net/multimedia/tv/3-radio.html')"><i class="icon ion-ios-mic"></i> Radio <i class="icon ion-ios-arrow-right"></i></a>
+            <a class="item-icon-left item-icon-right" ng-click="browse('http://www.fkvllaznia.com/multimedia/tv/3-radio.html')"><i class="icon ion-ios-mic"></i> Radio <i class="icon ion-ios-arrow-right"></i></a>
           </li>
       </ul>
     </div>
