--- a/www/templates/klasifikimi.html
+++ b/www/templates/klasifikimi.html
@@ -46,7 +46,7 @@
 <script id="popover-template.html" type="text/ng-template">
    <ion-popover-view>
       <ion-content>
-         <ion-radio ng-repeat="item in SezoneList" ng-value="item.value" ng-model="sezoni_id" ng-change="changeSezoni(item)" ng-click="changeSezoni(item)">{{ item.text }}</ion-radio>
+         <ion-radio ng-repeat="item in SezoneList" ng-value="item.value" ng-model="sezoni_id" ng-click="changeSezoni(item, $index)">{{ item.text }}</ion-radio>
       </ion-content>
    </ion-popover-view>
 </script>
