--- a/www/templates/ndeshjet.html
+++ b/www/templates/ndeshjet.html
@@ -12,9 +12,9 @@
 <ion-content class="has-subheader">
  <div class="item bg-transparent item-text-wrap pad5">
   <div class="row rnk" ng-repeat="item in items">
-    <div class="col {{item.team1}}"><img class="rank" ng-src="http://www.albaniasoccer.com/{{item.logo1}}">{{item.team1}}</div>
-    <div class="col col-20 col-center"><a ng-if="item.over>0" class="rez assertive" href="#app/ndeshja/{{item.id}}">{{item.gol1_over}} - {{item.gol2_over}} </a><a class="rez over{{item.over}}" href="#app/ndeshja/{{item.id}}">{{item.gol1}} - {{item.gol2}}</a></div>
-    <div class="col col-right {{item.team2}}">{{item.team2}} <img class="rank" ng-src="http://www.albaniasoccer.com/{{item.logo2}}"></div>
+    <div ui-sref="app.ndeshja({ndeshjaId: '{{item.id}}'})" class="col {{item.team1}}"><img class="rank" ng-src="http://www.albaniasoccer.com/{{item.logo1}}">{{item.team1}}</div>
+    <div ui-sref="app.ndeshja({ndeshjaId: '{{item.id}}'})" class="col col-20 col-center"><a ng-if="item.over>0" class="rez assertive" href="#app/ndeshja/{{item.id}}">{{item.gol1_over}} - {{item.gol2_over}} </a><a class="rez over{{item.over}}" href="#app/ndeshja/{{item.id}}">{{item.gol1}} - {{item.gol2}}</a></div>
+    <div ui-sref="app.ndeshja({ndeshjaId: '{{item.id}}'})" class="col col-right {{item.team2}}">{{item.team2}} <img class="rank" ng-src="http://www.albaniasoccer.com/{{item.logo2}}"></div>
   </div>
  </div>
 </ion-content>
@@ -24,7 +24,7 @@
 <script id="popover-template.html" type="text/ng-template">
    <ion-popover-view>
       <ion-content>
-         <ion-radio ng-repeat="item in SezoneListS" ng-value="item.value" ng-model="sezoni_id" ng-change="changeSezoni(item)" ng-click="changeSezoni(item)">{{ item.text }}</ion-radio>
+         <ion-radio ng-repeat="item in SezoneListS" ng-value="item.value" ng-model="sezoni_id" ng-click="changeSezoni(item, $index)">{{ item.text }}</ion-radio>
       </ion-content>
    </ion-popover-view>
 </script>
