Analytics and popup
Change analytics track data and popup

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -446,6 +446,7 @@ font-size:24px;
 
 .popover {
     height: auto !important;
+	width:  auto !important;
 }
 .popover ion-header-bar {
     position: relative;
