--- a/www/templates/kupa.html
+++ b/www/templates/kupa.html
@@ -22,7 +22,7 @@
 
 
 <script id="popover-template.html" type="text/ng-template">
-   <ion-popover-view>
+   <ion-popover-view id="kupa">
       <ion-content>
          <ion-radio ng-repeat="item in SezoneList" ng-value="item.value" ng-model="sezoni_id" ng-click="changeSezoni(item, $index)">{{ item.text }}</ion-radio>
       </ion-content>
