--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -2,7 +2,7 @@
   <ion-nav-buttons side="left">
     <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
-  <ion-content class="has-header">
+  <ion-content has-bouncing="false" class="has-header">
      <div>
      <ion-slide-box show-pager="true" does-continue="true" slide-interval="5000" disable-scroll="false">
         <ion-slide ng-repeat="slide in slider">
