fix update projects

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -35,7 +35,7 @@
           <i class="ion-arrow-graph-up-right"></i> Klasifikimi
         </ion-item>
         <ion-item nav-clear class="item-divider">
-           Kupa e Shqiperise
+           Kupa e Shqip&euml;ris&euml;
         </ion-item>
 		<ion-item nav-clear menu-close href="#/app/kupa">
           <i class="ion-trophy"></i> Ndeshjet
