--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -26,7 +26,7 @@
           <i class="ion-ios-people"></i> Ekipi
         </ion-item>
 		<ion-item nav-clear class="item-divider">
-          Superliga
+          Kampionati
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/ndeshjet">
           <i class="ion-calendar"></i> Ndeshjet
