--- a/www/css/style.css
+++ b/www/css/style.css
@@ -27,6 +27,8 @@
 
 body{
  /*font-family: 'arciformregular';*/
+ padding-top: constant(safe-area-inset-top); /* iOS 11.0 */
+ padding-top: env(safe-area-inset-top); /* iOS 11.2 */
 }
 
 @font-face {
